--- a/aboutus.html
+++ b/aboutus.html
@@ -42,6 +42,7 @@
                     <li><a href="gallery.html" target="_blank">Gallery</a></li>
        
                     <li><a href="contact.html" target="_blank">Contact</i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></li></a>
                 </ul>
             </div>
         </div>
@@ -187,6 +188,6 @@
     <p class="copy">&copy;2023 Beautiful Gardens | All Rights Reserved</p>
 </footer>
 <script src="weather.js"></script>
-<script src="javascript.js"></script>
+
 </body>
 </html>
