--- a/design.html
+++ b/design.html
@@ -43,6 +43,7 @@
                 </li>
                 <li><a href="gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="contact.html" target="_blank">Contact</i></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></li></a>
             </ul>
         </div>
     </div>
@@ -93,7 +94,7 @@
             <li>1 month free care</li>
             <li>1 month support</li>
         </ul>
-        <button>Add to chart</button>
+        <button>Add to cart</button>
 
     </div>
      <!--  CARD TWO !-->
@@ -108,7 +109,7 @@
             <li>2 month free care</li>
             <li>2 months support</li>
         </ul>
-        <button>Add to chart</button>
+        <button>Add to cart</button>
 
     </div>
         <!--  CARD THREE !-->
@@ -125,8 +126,7 @@
                 <li>3 months support</li>
                 <li>one year guarantee</li>
             </ul>
-            <button>Add to chart</button>
-
+            <button>Add to cart</button>
     </div>
 </div>
 </section>
