--- a/gallery.html
+++ b/gallery.html
@@ -50,6 +50,7 @@
                     <li><a href="gallery.html" target="_blank">Gallery</a></li>
                 
                     <li><a href="contact.html" target="_blank">Contact</i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></li></a>
                 </ul>
             </div>
         </div>
