--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </li>
                 <li><a href="gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="contact.html" target="_blank">Contact</i></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></li></a>
             </ul>
         </div>
     </div>
@@ -89,7 +90,7 @@
                 <p>
                     Any garden starts with an idea, and that's all we need: a good idea to develop.
                 </p>
-                <button type="button" class="button-explore"><a href="#">Learn more</a></button>
+                <button type="button" class="button-explore"><a href="design.html" target="_blank">Learn more</a></button>
             </div>
             <div class="vl"></div>
             <div class="service-cards">
@@ -100,7 +101,7 @@
                 <p>
                     Nothing could be more true: arranging a garden transforms a "land around the house" into a green universe
                 </p>
-                <button type="button" class="button-explore"><a href="#">Learn more</a></button>
+                <button type="button" class="button-explore"><a href="arrangement.html" target="_blank">Learn more</a></button>
             </div>
             <div class="vl"></div>
             <div class="service-cards">
@@ -111,7 +112,7 @@
                 <p>
                     The challenges start as soon as the garden development phase is finished, the pests acting from the first day. 
                 </p>
-                <button type="button" class="button-explore"><a href="#">Learn more</a></button>
+                <button type="button" class="button-explore"><a href="maintenance.html" target="_blank">Learn more</a></button>
             </div>
         </div>
         <hr class="horizontal-line">
