--- a/arrangement.html
+++ b/arrangement.html
@@ -43,10 +43,8 @@
                 </li>
 
                 <li><a href="gallery.html" target="_blank">Gallery</a></li>
-
-
-            
                 <li><a href="contact.html" target="_blank">Contact</i></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></li></a>
             </ul>
         </div>
     </div>
@@ -56,7 +54,7 @@
         <h2>
             Garden facilities and green spaces
         </h2>
-        <cite>Daca este amenajata calitativ, valoarea unei gradini va creste in timp.</cite>
+        <cite>If arranged qualitatively, the value of a garden will increase over time.</cite>
 
         <svg class="wave" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L60,181.3C120,203,240,245,360,234.7C480,224,600,160,720,149.3C840,139,960,181,1080,181.3C1200,181,1320,139,1380,117.3L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </div>
@@ -76,7 +74,7 @@
             <li>Aesthetic arrangement with bark or stone</li> 
         </ol>
         <div class="ol-arranjaments">  
-            <iframe autoplay  src="https://www.youtube.com/embed/utN8EliI4Xo?autoplay=1&muted=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe autoplay  src="https://www.youtube.com/embed/utN8EliI4Xo?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
 </div>
