--- a/design.html
+++ b/design.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/design.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/8381031cca.js" crossorigin="anonymous"></script>
@@ -43,7 +43,23 @@
                 </li>
                 <li><a href="gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="contact.html" target="_blank">Contact</i></a></li>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></li></a>
+                <li class="cart-icon">
+                    <div class="cart-btn"><span class="nav-icon-cart"><i class="fas fa-cart-shopping"></i></span><div class="cart-items-icon">0</div>
+                    </div>
+                <!--cart section-->
+                    <div class="cart-box"> 
+                        <div class="whole-cart-window">
+                            <h2 class="shopping-title">Shopping bag</h2>
+                            <div class="cart-wrapper">
+                                <div class="cart">
+                                    <ul class="cart-items"></ul>
+                                </div>
+                            </div>
+                            <div class="checkout" href="#">Checkout</div>
+                            <div class="view-cart" href="#">View cart</div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
@@ -80,56 +96,13 @@
     </div>
   </div>
 </section>
+
 <section class="design-prices" id ="price-down">
 <div class="container-prices">
-    <!--  CARD ONE !-->
-    <div class="card-price smal">
-        <h3>SMAL GARDEN</h3>
-        <p>$275</p>
-        <ul>
-            <li>
-                Dimensions: 15m<sup>2</sup> to 100m<sup>2</sup>
-            </li>
-            <li>Consulting</li>
-            <li>1 month free care</li>
-            <li>1 month support</li>
-        </ul>
-        <button>Add to cart</button>
-
-    </div>
-     <!--  CARD TWO !-->
-     <div class="card-price medi">
-        <h3>MEDIUM GARDEN</h3>
-        <p>$680-$850</p>
-        <ul>
-            <li>
-                Dimensions: 100m<sup>2</sup> to 320m<sup>2</sup>
-            </li>
-            <li>Consulting</li>
-            <li>2 month free care</li>
-            <li>2 months support</li>
-        </ul>
-        <button>Add to cart</button>
-
-    </div>
-        <!--  CARD THREE !-->
-    <div class="card-price large">
-            <h3>LARGE GARDEN</h3>
-            <p>$890-$1,230</p>
- 
-            <ul >
-                <li>
-                    Dimensions: 320m<sup>2</sup> to 800m<sup>2</sup>
-                </li>
-                <li>Consulting</li>
-                <li>3 months free care</li>
-                <li>3 months support</li>
-                <li>one year guarantee</li>
-            </ul>
-            <button>Add to cart</button>
-    </div>
+    <!-- HERE IS A CONTAINER WICH IS MANIPULATED BY DOM -->
 </div>
 </section>
+
 <section >
     <div class="create">
         <div class="design-gardena">
@@ -174,7 +147,7 @@
     </div>
     <p class="copy">&copy;2023 Beautiful Gardens | All Rights Reserved</p>
 </footer>
-<script src="javascript.js"></script>
+<!-- <script src="javascript.js"></script> -->
+<script src="addcart.js"></script>
 </body>
 </html>
-
