--- a/index.html
+++ b/index.html
@@ -42,11 +42,29 @@
                 </li>
                 <li><a href="gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="contact.html" target="_blank">Contact</i></a></li>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></li></a>
+                <li class="cart-icon">
+                    <div class="cart-btn"><span class="nav-icon-cart"><i class="fas fa-cart-shopping"></i></span><div class="cart-items-icon">0</div>
+                    </div>
+                <!--cart section-->
+                    <div class="cart-box"> 
+                        <div class="whole-cart-window">
+                            <h2 class="shopping-title">Shopping bag</h2>
+                            <div class="cart-wrapper">
+                                <div class="cart">
+                                    <ul class="cart-items"></ul>
+                                </div>
+                            </div>
+                            <div class="checkout" href="#">Checkout</div>
+                            <div class="view-cart" href="#">View cart</div>
+                        </div>
+                    </div>
+                </li>     
             </ul>
         </div>
     </div>
+
 </header>
+
     <div class="hero-image">
         <div class="hero-text">
           <h1 >Design for your garden</h1>
@@ -221,6 +239,7 @@
     <p class="copy">&copy;2023 Beautiful Gardens | All Rights Reserved</p> 
 </footer>
 <script src="javascript.js"></script>
+<script src="addcart.js"></script>
 </body>
 </html>
 
