--- a/design.html
+++ b/design.html
@@ -32,7 +32,7 @@
             <ul >
                 <li><a href="index.html" target="_self"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="aboutus.html" target="_blank">About us</a></li>
-                <li><a href="#" target="_blank">Services<i class="fa fa-caret-down"></i></a>
+                <li><a href=""target="_blank">Services<i class="fa fa-caret-down"></i></a>
                     <div class="dropdown">
                         <ul >
                             <li><a href="design.html" target="_blank">Design</a></li>
@@ -52,7 +52,7 @@
                             <h2 class="shopping-title">Shopping bag</h2>
                             <div class="cart-wrapper">
                                 <div class="cart">
-                                    <ul class="cart-items"></ul>
+                                    <ul class="cart-items" id="data-item-id"></ul>
                                 </div>
                             </div>
                             <div class="checkout" href="#">Checkout</div>
